--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -1108,6 +1108,9 @@
   .text-error {
     color: var(--color-error);
   }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
   .text-text {
     color: var(--color-text);
   }
